refractor: 유저 USER, ADMIN 분리